Updated theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Provost Theme (Child Theme)
+Theme Name: Provost Child Theme
 Template: UCF-WordPress-Theme
 Author: UCF Web Communications
 Github Theme URI: https://github.com/UCF/Provost-Theme/
