Fixed github uri

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Provost Child Theme
 Template: UCF-WordPress-Theme
 Author: UCF Web Communications
-Github Theme URI: https://github.com/UCF/Provost-Theme/
+Github Theme URI: https://github.com/UCF/Provost-Child-Theme/
 Version: v0.0.0
 */
 
